# ProjektZC

./: .gitignore  2graczy.c  2graczy.h  3graczy.c  3graczy.h  4graczy.c  4graczy.h  CMakeLists.txt  Doxyfile  README.md  WspolneFunkcjeRoznchWersji.c  WspolneFunkcjeRoznchWersji.h  main.c  sprawdzaniePrzesuniec.c  sprawdzaniePrzesuniec.h  types.h  zmianyNotacjiIObrazow.c  zmianyNotacjiIObrazow.h
